# bubbel-backend

./: .gitignore  Cargo.toml  GUIDE.md  LICENSE  README.md  TUTORIAL.md  rust-toolchain
.github/workflows/: rust.yml
bubbel-backend/: Cargo.toml
bubbel-backend/src/: collect_garbage.rs  dc_api.rs  debug.rs  dumpy.rs  email.rs  lib.rs  main.rs  route.rs
bubbel-backend/src/codegen/: custom_kotlin.rs  goodies.ts  mod.rs  swift.rs  typescript.rs
bubbel-bath/: Cargo.toml
bubbel-bath/migrations/2023-07-04-031922_users/: up.sql
bubbel-bath/migrations/2023-07-13-184740_add_users_is_verified/: down.sql  up.sql
bubbel-bath/migrations/2023-07-14-174759_add_user_profiles/: up.sql
bubbel-bath/migrations/2023-07-28-203835_add_clubs/: down.sql  up.sql
bubbel-bath/migrations/2023-08-02-202040_add_club_members/: down.sql  up.sql
bubbel-bath/migrations/2023-08-04-032755_add_friend_connections/: down.sql  up.sql
bubbel-bath/migrations/2023-08-12-015809_club_profiles_name_unique/: down.sql  up.sql
bubbel-bath/migrations/2023-08-19-015418_add_dc/: down.sql  up.sql
bubbel-bath/migrations/2023-08-30-040352_add_rooms/: down.sql  up.sql
bubbel-bath/migrations/2023-09-02-004019_add_message_groups/: down.sql  up.sql
bubbel-bath/src/: account_verification.rs  auth.rs  auth_user.rs  create_user.rs  get_user_profile.rs  lib.rs  schema.rs  send_verify.rs  set_user_profile.rs  verify_account.rs  verify_user.rs
bubbel-bath/src/api/: add_friend_connection.rs  add_user_to_message_group.rs  auth_user.rs  check_token.rs  create_club.rs  create_message_group.rs  create_message_room.rs  create_room.rs  create_user.rs  delete_club.rs  delete_user.rs  get_club_id_with_name.rs  get_club_members.rs  get_club_message_rooms.rs  get_club_profile.rs  get_club_profile_with_name.rs  get_data_channel_chunk.rs  get_friend_connections.rs  get_message_group.rs  get_message_group_members.rs  get_message_group_name.rs  get_message_room.rs  get_message_room_members.rs  get_random_clubs.rs  get_random_users.rs  get_user_clubs.rs  get_user_message_groups.rs  get_user_profile.rs  get_user_profile_with_username.rs  join_club.rs  join_message_room.rs  join_room.rs  mod.rs  regex_search_clubs.rs  regex_search_users.rs  remove_friend.rs  resolve_and_upload.rs  send_verify.rs  set_club_profile.rs  set_message_group_name.rs  (+8 more)
bubbel-bath/src/auth/: mod.rs
bubbel-bath/src/data/: club.rs  club_members.rs  club_profile.rs  friend_connection.rs  message_group.rs  message_group_members.rs  message_room.rs  message_room_members.rs  mod.rs  user.rs  user_profile.rs
bubbel-bath/src/dc/: mod.rs
bubbel-bath/src/dc/api/: init.rs  mod.rs
bubbel-bath/src/dc/api/req/: delete.rs  edit.rs  mod.rs  send.rs
bubbel-bath/src/dc/api/res/: mod.rs  on_delete.rs  on_edit.rs  on_new.rs
bubbel-bath/src/dc/message/: mod.rs  text.rs
bubbel-bath/src/state/: account_verification.rs  auth.rs  channel.rs  mod.rs
bubbel-bath/src/tests/: mod.rs  test_account_limbo_collect_garbage.rs  test_auth_collect_garbage.rs  test_clubs.rs  test_create_club_profile.rs  test_create_user.rs  test_deauth_user.rs  test_delete_user.rs  test_friends.rs  test_join_clubs.rs  test_message_rooms.rs  test_resend_verify.rs  test_set_user_profile.rs
bubbel-codegen/: Cargo.toml  README.md
bubbel-codegen/src/: kotlin.rs  main.rs  swift.rs  typescript.rs
bubbel-dumpster/: Cargo.toml
bubbel-dumpster/src/: main.rs
bubbel-inspector/: Cargo.toml  README.md
bubbel-inspector/src/: main.rs
sdks/: BubbelBackend.kt  BubbelBackend.swift  README.md  bubbelBackend.ts  davids_sync_script
sdks/kotlin/: InAddFriendConnection.kt  InAuthUser.kt  InCreateClub.kt  InCreateUser.kt  InDeauthUser.kt  InDeleteClub.kt  InDeleteUser.kt  InGetClubMembers.kt  InGetClubProfile.kt  InGetFriendConnections.kt  InGetUserClubs.kt  InGetUserProfile.kt  InGetUserProfileWithUsername.kt  InJoinClub.kt  InRemoveFriend.kt  InSendVerify.kt  InSetClubProfile.kt  InSetUserProfile.kt  InUnjoinClub.kt  InVerifyAccount.kt  ResAddFriendConnection.kt  ResAuthUser.kt  ResCreateClub.kt  ResCreateUser.kt  ResDeauthUser.kt  ResDeleteClub.kt  ResDeleteUser.kt  ResGetClubMembers.kt  ResGetClubProfile.kt  ResGetFriendConnections.kt  ResGetUserClubs.kt  ResGetUserProfile.kt  ResGetUserProfileWithUsername.kt  ResJoinClub.kt  ResRemoveFriend.kt  ResSendVerify.kt  ResSetClubProfile.kt  ResSetUserProfile.kt  ResUnjoinClub.kt  ResVerifyAccount.kt  (+1 more)
src/: main.rs
