[package]
name = "bubbel-backend"
version = "0.1.0"
edition = "2021"
default-run = "bubbel_backend_runtime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bubbel_backend"
path = "src/lib.rs"

[[bin]]
name = "bubbel_backend_runtime"
path = "src/main.rs"

[dependencies]
axum = "0.6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
bubbel-bath = { version = "*", path = "../bubbel-bath/" }
