[package]
name = "bubbel-backend"
version = "0.1.0"
edition = "2021"
default-run = "bubbel-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["ws"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
async-trait = "0.1"
serde_json = "1"
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.4", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
bubbel-bath = { version = "*", path = "../bubbel-bath/" }
serde = { version = "1", features = ["derive"] }
schemars = "0.8"
lettre = "0.10"
json = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = "0.14"
axum-client-ip = "0.4"
libdumpster = { version = "*", git = "https://github.com/joinbubbel/dumpster" }
dumpster-axum = { version = "*", git = "https://github.com/joinbubbel/dumpster" }
