[package]
name = "bubbel-bath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
password-hash = { version = "0.5", features = ["getrandom"] }
argon2 = "0.5"
rand = { version = "0.8", features = ["getrandom"] }
regex = "1"
bimap = "0.6"
serde = { version = "1", features = ["derive"] }
