[package]
name = "bubbel-bath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["sync", "macros"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
password-hash = { version = "0.5", features = ["getrandom"] }
argon2 = "0.5"
rand = { version = "0.8", features = ["getrandom"] }
regex = "1"
bimap = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
async-trait = "0.1.73"
b64 = "0.4"
reqwest = "0.11"
dumpster-axum = { version = "*", git = "https://github.com/joinbubbel/dumpster", default-features = false }

[dev-dependencies]
serial_test = "0.4"
