[package]
name = "bubbel-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
bubbel-backend = { version = "*", path = "../bubbel-backend/" }
schemajen = { version = "*", git = "https://github.com/davnotdev/schemajen" }
