[package]
name = "bubbel-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"
schemars = "0.8"
serde_json = "1"
project-root = "0.2"
bubbel-backend = { version = "*", path = "../bubbel-backend/" }
